--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -98,7 +98,8 @@
             let studentData; 
 
             try {
-                const response = await fetch('http://localhost:3000/my-profile', {
+                // const response = await fetch('http://localhost:3000/my-profile', {
+                const response = await fetch('/api/create-user', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email: userEmail })
