--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -99,7 +99,7 @@
 
             try {
                 // const response = await fetch('http://localhost:3000/my-profile', {
-                const response = await fetch('/api/create-user', {
+                const response = await fetch('/api/my-profile', { // <-- CORRECT URL
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email: userEmail })
