--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <nav class="main-nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="login.html" class="nav-link">Login</a></li>
-                    <li class="nav-item"><a href="/reports" class="nav-link">Reports</a></li>
-                    <li class="nav-item"><a href="/dashboard" class="nav-link">Dashboard</a></li>
+                    <!-- <li class="nav-item"><a href="/reports" class="nav-link">Reports</a></li>
+                    <li class="nav-item"><a href="/dashboard" class="nav-link">Dashboard</a></li> -->
                 </ul>
             </nav>
         </div>
