--- a/forgot-password.html
+++ b/forgot-password.html
@@ -10,6 +10,11 @@
 </head>
 <body>
 
+    <a href="index.html" class="logo-badge">
+        <img src="logo.jpg" alt="Eduwise Logo">
+        <span>Eduwise</span>
+    </a>
+
     <div class="container">
         <div class="form-box">
             <form id="forgotPasswordForm">
