--- a/login.html
+++ b/login.html
@@ -12,7 +12,8 @@
 <body>
 
     <a href="index.html" class="logo-badge">
-        <img src="logo.jpg" alt="Eduwise Logo">
+        <link rel="icon" type="image/jpeg" href="/logo.jpg">
+        <!-- <img src="logo.jpg" alt="Eduwise Logo"> -->
         <span>Eduwise</span>
     </a>
     <div class="container" id="container">
