--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Eduwise</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/jpeg" href="/logo.jpg?v=2">
     <link rel="stylesheet" href="login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -12,8 +12,7 @@
 <body>
 
     <a href="index.html" class="logo-badge">
-        <link rel="icon" type="image/jpeg" href="/logo.jpg">
-        <!-- <img src="logo.jpg" alt="Eduwise Logo"> -->
+        <img src="logo.jpg" alt="Eduwise Logo">
         <span>Eduwise</span>
     </a>
     <div class="container" id="container">
