--- a/student_dashboard.html
+++ b/student_dashboard.html
@@ -21,10 +21,10 @@
             </div>
             <nav class="main-nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#" id="logout-link" class="nav-link">Logout</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link active">Dashboard</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Reports</a></li>
-                </ul>
+                        <li class="nav-item"><a href="#" id="logout-link" class="nav-link">Logout</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link active">Dashboard</a></li>
+                        <li class="nav-item"><a href="student_report.html" class="nav-link">Reports</a></li>
+                    </ul>
             </nav>
         </div>
     </header>
